# mactest

./: .gitignore  Info.plist  README.md  com.github.xournalpp.mactest.json  macTest.bundle  meson.build  test.zgw
po/: POTFILES  meson.build
src/: mactest-application.cpp  mactest-application.h  mactest-window.cpp  mactest-window.h  mactest-window.ui  mactest.gresource.xml  main.cpp  meson.build
